# RareDiseaseFinder

./: .gitignore  README.md  ddd.py  output.json  pyproject.toml
ChromeProfileUnique/: DevToolsActivePort  Local State
ChromeProfileUnique/Default/: BrowsingTopicsState  Preferences  Secure Preferences  Visited Links  Web Data
ChromeProfileUnique/GrShaderCache/: data_0  data_1  index
ChromeProfileUnique/GraphiteDawnCache/: index
ChromeProfileUnique/ShaderCache/: index
docs/: AppArquitecture.md  OrquestratorArquitecture.md
docs/guides/: Guia_Implementar_Proveedor_Datos_Biologicos_RareDiseaseFinder.docx  Guía_Desarrollador_Front_End_API_REST_RareDiseaseFinder.docx  Inventario_de_extraccion_de_informacion_de_fuentes_de_datos_biomedicas_COMENTARIOS SECCs Y WFs.docx  SeguimientoFuentes.xlsx
examples/: InfoiUniprot.ipynb  googleColabAcess.ipynb
examples/reports/: DOHH_INFORME_FINAL_20250707.html  FANCA_INFORME_FINAL_20250707.html  KCNA2_INFORME_FINAL_20250707.html  TTR_INFORME_FINAL_20250707.html
rarediseasefinder/: LICENSE.txt  __init__.py  main.py  pyproject.toml
rarediseasefinder/fetch/: uniprot_fetch.py
src/rarediseasefinder/: __init__.py  (+1 more)
tests/: DOHH_2025-07-03_05-35-57.json  DOHH_2025-07-06_07-35-24.json  DOHH_2025-07-07_19-03-44.json  FANCA_2025-07-03_05-34-01.json  FANCA_2025-07-06_07-50-55.json  FANCA_2025-07-07_19-00-02.json  KCNA2_2025-07-03_05-35-06.json  KCNA2_2025-07-06_04-21-12.json  KCNA2_2025-07-07_19-02-55.json  TTR_2025-07-03_05-32-57.json  TTR_2025-07-06_07-24-58.json  TTR_2025-07-07_18-58-23.json  test_groupby.py  test_results.json
(+138 files in other folders)
