[tool.poetry]
name = "rarediseasefinder"
version = "0.1.0"
description = "Search engine for information on rare diseases."
authors = ["Mario Bravo Cuadro <mario.bravo.cuadro@alumnos.upm.es>"]
license = "MIT"
packages = [{ include = "rarediseasefinder", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
tabulate = "^0.9.0"

[tool.poetry.group.colab.dependencies]
selenium = "^4.9.0"
google-colab-selenium = "^1.0.14"
ipython = "^8.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"